# Igris_c_ros2_ws

./: .gitignore  .gitmodules
install/: local_setup.sh  setup.sh
install/Igris/share/Igris/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/camera/share/camera/: package.sh  package.xml
install/collect_data/lib/collect_data/: data_collector
install/collect_data/share/collect_data/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/igris/share/igris/: local_setup.sh  package.bash  (+4 more)
log/: latest_build
robot_dataset/data/chunk-005/: episode_000000.parquet  episode_000001.parquet  episode_000002.parquet  episode_000003.parquet  episode_000004.parquet
robot_dataset/data/chunk-006/: episode_000000.parquet  episode_000001.parquet  episode_000002.parquet  episode_000003.parquet  episode_000004.parquet
robot_dataset/data/chunk-007/: episode_000000.parquet  episode_000001.parquet  episode_000002.parquet  episode_000003.parquet  episode_000004.parquet
robot_dataset/data/chunk-008/: episode_000000.parquet  episode_000001.parquet  episode_000002.parquet  episode_000003.parquet  episode_000004.parquet
robot_dataset/meta/: episodes.jsonl  info.json  modality.json
src/Igris/: setup.cfg  setup.py
src/Igris/Igris/: robot_controller.py
src/camera/: setup.py
src/camera/test/: teleop.py
src/collect_data/: setup.cfg  setup.py
src/igris/: CMakeLists.txt  package.xml
src/igris/src/: igris.cpp
src/igris_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/igris_moveit_config/config/: IGRIS_C.srdf  head_servo_params.yaml  joint_limits.yaml  kinematics.yaml  left_leg_servo_params.yaml  left_servo_params.yaml  moveit_controllers.yaml  right_leg_servo_params.yaml  right_servo_params.yaml  ros2_controllers.yaml  sensors_3d.yaml  waist_servo_params.yaml
src/igris_moveit_config/igris_moveit_config/: pink_ik_node.py
src/igris_moveit_config/launch/: collision_avoidance_demo.launch.py  demo.launch.py  full_servo_test.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  self_collision_test.launch.py  servo_launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/igris_moveit_config/src/: collision_avoidance_planner.cpp  go_home_node.cpp  self_collision_test_node.cpp
src/interface/: CMakeLists.txt
src/manus_ros2/: CMakeLists.txt
src/moveit_igris/: CMakeLists.txt
src/moveit_igris/config/: IGRIS_C.srdf  IGRIS_C.urdf.xacro  initial_positions.yaml  moveit_controllers.yaml
src/moveit_igris/launch/: rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  warehouse_db.launch.py
src/teleoperator/: setup.cfg  setup.py
src/teleoperator/teleoperator/: hand_bridge.py  teleop.py
src/urdf_igris/: CMakeLists.txt  package.xml
src/urdf_igris/urdf/: igris_c_v2.urdf  igris_c_v2_parallel.urdf  right_hand_igris_c.urdf
(+62 files in other folders)
