cmake_minimum_required(VERSION 3.8)
project(igris)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
set(igris_sdk_DIR "${CMAKE_CURRENT_SOURCE_DIR}/../Igris/Igris/igris_c_sdk_public/lib/cmake/igris_sdk")
find_package(rclcpp REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(igris_sdk REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

add_executable(igris src/igris.cpp)
ament_target_dependencies(igris rclcpp sensor_msgs)

target_link_libraries(
  igris
  igris_sdk::igris_sdk
)

install(TARGETS
  igris
  DESTINATION lib/${PROJECT_NAME})

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()

